--- a/index.html
+++ b/index.html
@@ -1,95 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FakeStore</title>
-  <link rel="stylesheet" href="./css/style.css" />
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <title>CiliconCity || Buy. Think. Grow.</title>
 
-  <!-- google Montserrat  font  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
-</head>
+    <!-- bootstrap css cdn -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
 
-<body>
-  <header></header>
-  <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7">
-        <div id="all-products" class="">
-          <h1></h1>
+    <!-- Bootstrap icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+
+    <!-- Fav icon -->
+    <link rel="shortcut icon" href="./images/fav.png" type="image/x-icon" />
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Custom css -->
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+
+  <body>
+    <!-- header part -->
+    <header>
+      <!-- navbar -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand fw-bold ms-md-5" href="#"
+            ><span class="text-warning">Cilicon</span
+            ><span class="text-success">City</span></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto me-md-5">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
-        <div class="cart" id="my-cart">
-          <table class="table">
-            <thead>
-              <h1>My-Cart</h1>
-              <tr>
-                <th scope="col"></th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th>Total Added-Products:</th>
-                <td>$ <span id="total-Products">0</span></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>Price:</th>
-                <td>$ <span id="price">0</span></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>Delivery-Charge:</th>
-                <td>$ <span id="delivery-charge">20</span></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>Total-Tax:</th>
-                <td>$ <span id="total-tax">0</span></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row">Total</th>
-                <td colspan="2">$ <span id="total">0</span></td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+      </nav>
+    </header>
+    <!-- main part  -->
+    <main class="main">
+      <!-- search-box -->
+      <div class="container">
+        <h1 class="text-center fw-bold">
+          Welcome To <span class="text-warning">Cilicon</span
+          ><span class="text-success">City</span>
+        </h1>
+        <p class="text-center secondary-text-color">
+          <small>Find it, love it, buy it and live better with better look.</small>
+        </p>
+        <div class="search-box mt-1">
+          <div class="input-group mb-3 w-100 mx-auto search-bar">
+            <input
+              type="text"
+              class="form-control"
+              id="input-field"
+              placeholder="Search Products..."
+            />
+            <button
+              class="btn bg-success text-white px-md-4"
+              type="button"
+              id="search-btn"
+              onclick="loadProducts()"
+            >
+              Search
+            </button>
           </div>
         </div>
       </div>
-    </div>
-  </main>
-  <footer></footer>
+      <!-- product display section -->
+      <div class="container">
+        <div class="row mt-5 mb-5">
+          <div class="col-md-9 col-lg-9 col-sm-7">
+            <div
+              id="all-products"
+              class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"
+            ></div>
+          </div>
+          <!-- cart section  -->
+          <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
+            <div class="cart" id="my-cart">
+              <table class="table">
+                <thead>
+                  <h2 class="text-center">My-Cart</h2>
+                  <tr>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th>Total Added-Products:</th>
+                    <td><span id="total-Products">0</span></td>
+                  </tr>
+                  <tr>
+                    <th>Price:</th>
+                    <td>$ <span id="price">0</span></td>
+                  </tr>
+                  <tr>
+                    <th>Delivery-Charge:</th>
+                    <td>$ <span id="delivery-charge">20</span></td>
+                  </tr>
+                  <tr>
+                    <th>Total-Tax:</th>
+                    <td>$ <span id="total-tax">0</span></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Total</th>
+                    <td colspan="2">$ <span id="total">0</span></td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="parces text-center">
+                <button class="btn text-white text-center bg-success">
+                  Buy Now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- footer part -->
+    <footer class="py-3">
+      <p class="text-center">
+       &copy; All rights reserved by CiliconCity - 2021
+      </p>
+    </footer>
+    <!-- Bottsrap js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- add javascript  file  -->
-  <script src="./js/app.js"></script>
-</body>
-
+    <!-- add javascript  file  -->
+    <script src="./js/app.js"></script>
+  </body>
 </html>
